# ros2_learn

./: README.md
chapt1/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_world.cpp  learn_cmake
chapt10/chapt10_ws/install/: local_setup.sh  setup.sh
chapt10/chapt10_ws/log/: latest_build
chapt2/: CMakeLists.txt.back  ros2_cpp_node.cpp  ros2_python_node.py  test_args.cpp
chapt2/chapt2_ws/: novel1.txt  novel3.txt
chapt2/chapt2_ws/install/: local_setup.sh  setup.sh
chapt2/chapt2_ws/log/: latest_build
chapt3/: novel1.txt  novel2.txt
chapt3/topic_practice_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chapt3/topic_practice_ws/log/: latest_build
chapt3/topic_ws/install/: local_setup.sh  setup.sh
chapt3/topic_ws/log/: latest_build
chapt4/chapt4_ws/install/: local_setup.sh  setup.sh
chapt4/chapt4_ws/install/chapt4_interfaces/share/chapt4_interfaces/rust/: Cargo.toml
chapt4/chapt4_ws/install/chapt4_interfaces/share/chapt4_interfaces/rust/src/: srv.rs
chapt4/chapt4_ws/log/: latest_build
chapt5/: rviz_tf.rviz
chapt5/chapt5_ws/install/: local_setup.sh  setup.sh
chapt5/chapt5_ws/log/: latest_build
chapt6/chapt6_ws/install/: local_setup.sh  setup.sh
chapt6/chapt6_ws/log/: latest_build
chapt7/chapt7_ws/.marscode/: deviceInfo.json
chapt7/chapt7_ws/install/: local_setup.sh  setup.sh
chapt7/chapt7_ws/log/: latest_build
chapt7/chapt7_ws/src/: README.md
chapt8/chapt8_ws/install/: local_setup.sh  setup.sh
chapt8/chapt8_ws/log/: latest_build
chapt8/chapt8_ws/src/: README.md
(+308 files in other folders)
